--- a/repositorio/lcufrpeprog/.classpath
+++ b/repositorio/lcufrpeprog/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/Jonathan Moura/Desktop/postgresql-42.2.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Jonathan Moura/Desktop/jdt-compiler-3.1.1.jar/jdt-compiler-3.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan Moura/Desktop/javax.mail-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
